[gd_scene load_steps=5 format=3 uid="uid://udway7ncy7id"]

[ext_resource type="Script" uid="uid://2mux5u6bkh0j" path="res://interface/controls.gd" id="1_ij41j"]
[ext_resource type="PackedScene" uid="uid://dvjjg6cpbfily" path="res://Interface/command_select.tscn" id="2_x0sgd"]
[ext_resource type="Texture2D" uid="uid://cfar6npgupuuf" path="res://icon.svg" id="3_epadu"]
[ext_resource type="PackedScene" uid="uid://jcmlafiwx4rg" path="res://Interface/command_sequence.tscn" id="3_lodp2"]

[node name="Controls" type="CanvasLayer"]
script = ExtResource("1_ij41j")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -236.0
grow_horizontal = 0
grow_vertical = 2

[node name="MainMarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="MainVerticalLayout" type="VBoxContainer" parent="PanelContainer/MainMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="CommandSelect" parent="PanelContainer/MainMarginContainer/MainVerticalLayout" instance=ExtResource("2_x0sgd")]
layout_mode = 2

[node name="Separator" type="TextureRect" parent="PanelContainer/MainMarginContainer/MainVerticalLayout"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
texture = ExtResource("3_epadu")
expand_mode = 1

[node name="CommandSequence" parent="PanelContainer/MainMarginContainer/MainVerticalLayout" instance=ExtResource("3_lodp2")]
layout_mode = 2

[node name="Spacer" type="Control" parent="PanelContainer/MainMarginContainer/MainVerticalLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="TextureButton" parent="PanelContainer/MainMarginContainer/MainVerticalLayout"]
layout_mode = 2
texture_normal = ExtResource("3_epadu")
stretch_mode = 0

[node name="Label" type="Label" parent="PanelContainer/MainMarginContainer/MainVerticalLayout/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Play !"
horizontal_alignment = 1
vertical_alignment = 1
